--- a/applicant_reg.html
+++ b/applicant_reg.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="style2.css">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <script src="js/script.js"></script>
     <script src="js/script2.js"></script>
 
