--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <!-- CSS only -->
 
     <link rel="stylesheet" href="style2.css">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <title>CareerBoost</title>
 </head>
 
