changed path color

--- a/job-post-employer.html
+++ b/job-post-employer.html
@@ -52,7 +52,7 @@
         <h1 class="text-2xl md:text-4xl font-bold text-primary-text">Post your Job</h1>
         <p class="text-sm">Fill out the form below for the job requirements</p>
     </div>
-    <form action="employers-dashboard.html">
+    <form action="employers-dashboard.html" class="padded">
         <h1 class="text-xl font-bold text-primary-text text-center">JOB REQUIREMENTS</h1>
         <div class="border py-5 md:py-10 px-5 md:px-14 my-10 md:w-3/4 mx-auto shadow-lg bbox">
             <div class="form-group mb-5">
